# fastapi-graphql-nextjs-starter

./: .gitignore  Makefile  pyproject.toml
app/backend/: main.py  models.py  schema.py  serializers.py  utils.py
app/ui/components/: Header.js  ListPosts.js  Submit.js
app/ui/lib/: apolloClient.js
app/ui/pages/: index.js  ssr.js
